Fix css for navbar on mobile size

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,16 +3,16 @@
 }
   
 .input-width {
-    width: 896px;
+    width: calc(100% - 12px);
     margin: 3px 0 10px 0;
     padding: 6px 0px 6px 10px;
-    font-size: 16px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 14px;
+    border: 1px solid lightgray;
 }
 
 .input-width::placeholder {
-  color: rgb(134, 134, 134);
+    color: rgb(134, 134, 134);
 }
 
 .button {
@@ -33,11 +33,14 @@
     background: #29706d;
 }
 
-textarea {
+.message-box {
     resize: vertical;
     height: 200px;
+    width: calc(100% - 10px);
 }
 
-.input-width {
-    width: 98%;
+@media only screen and (max-width: 640px) {
+    .input-width {
+        /* width: 95%; */
+    }
 }
