--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,3 +7,11 @@
 p {
   padding: 0 25px;
 }
+
+@media only screen and (max-width: 640px) {
+  .image-me {
+    width: 100%;
+    height: auto;
+    padding-bottom: 15px;
+  }
+}
