--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,12 +157,6 @@ footer {
         font-size: 30px;
     }
 
-    .image-me {
-        width: 100%;
-        height: auto;
-        padding-bottom: 15px;
-    }
-
     h1 {
         width: 100%;
         text-align: center;
@@ -182,11 +176,10 @@ footer {
 
     #menu {
         position: static;
-        background: white;
         padding: 20px 0;
         margin: 0 auto;
-        width: 268px;
-        font-size: 18px;
+        width: 260px;
+        font-size: 17px;
     }
 
     li {
